--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Varahs Jain",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.3.0"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,6 @@
   "bugs": {
     "url": "https://github.com/vjain83/book-search-engine/issues"
   },
-  "homepage": "https://github.com/vjain83/book-search-engine#readme"
+  "homepage": "https://github.com/vjain83/book-search-engine#readme",
+  "dependencies": {}
 }
